fix: comment textarea 높이에 따른 comment 요소 높이 조정 함수 오류 해결 (#341) - gap 구하는 방식 잘못됨

--- a/src/main/resources/static/css/diary/comment.css
+++ b/src/main/resources/static/css/diary/comment.css
@@ -162,7 +162,7 @@
 
 .comment-textarea {
     position: absolute;
-    bottom: 14px;
+    bottom: 12px;
 
     width: 180px;
     height: 20px;
